2008-02-29  Noel O'Boyle <baoilleach@gmail.com>

	* acinclude.m4: Just say 'not found' if BOOST not found.
	* configure.in: Look for BOOST and look for tr1/memory.

2008-02-29  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Bugfix for "[ 1904345 ] Angle, Pair,
	Torsion iterators dones not have deref() method". Turns out that I
	could have been using the __ref__() method all along. This doesn't
	seem to be in the SWIG documentation though.


2008-02-28  Marcus D. Hanwell  <marcus@cryos.org>

	* include/openbabel/grid.h, src/grid.cpp,
	include/openbabel/griddata.h, src/griddata.cpp: Fixed the
	interpolateDerivative function (hopefully). Added new functions to set
	and retrieve values from the grid using just grid indices. This should
	become the preferred way to access the grid values.

	* include/openbabel/grid.h, src/grid.cpp, src/griddata.cpp: Updated
	the grid classes to use an x, y, z index and added several new
	convenience functions using vector3 variables. Some more work is
	needed and a few extra functions to access/set grid values.

	* src/formats/gausscubeformat.cpp: Stop translating from x, y, z index
	to z, y, x as the grid classes now use the more common x, y, z index.

2008-02-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefields/forcefielduff.*: Remove redundant calls to
	Compute when calculating gradients. Remove un-needed angle/oop
	code. Problem lies elsewhere.

	* doc/Makefile.am, doc/Makefile.in: Add missing man pages and html
	documentation.

	* doc/roundtrip.1: Add missing man page. (More needed for new
	tools.)

	* test/roundtrip.cpp: Fix incorrect usage statement. Thanks to
	Daniel Leidert.

	* acinclude.m4: Add Boost detection code. Still needs addition to
	configure script.

2008-02-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h, src/base.cpp: Add new GetAllData()
	function to return a vector of all OBGenericData of a given